Fix layout issue of home image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -147,18 +147,22 @@ h5 {
 }
 
 .home-image {
-    padding: 1rem 2rem 2rem 2rem;
+    padding: 1rem 1.5rem 1.5rem 1.5rem;
 }
 
 /*-------------------------About Page------------------- */ 
 .about-section {
     text-align: center;
     margin: 0;
-    padding: 2rem 2rem .5rem 2rem;
+    padding-top: 2rem;
 }
 
 .station-section {
-    padding-top: 4rem;
+    padding: 2rem 2rem .5rem 2rem;
+}
+
+.mission-section {
+    padding: 0rem 2rem .5rem 2rem;
 }
 
 .promise-section {
@@ -176,7 +180,7 @@ h5 {
 }
 
 .station-image, .mission-image {
-    padding: 1rem;
+    padding: 1rem 1.5rem 1.5rem 1.5rem;
 }
 
 /*--------------------Our Products Page----------------- */ 
